samples/_failures_safe/1761402503_f70bb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19900f5a.c: In function ‘main’:
./samples/SAFE/__tmp_19900f5a.c:169:5: error: expected declaration or statement at end of input
  169 |     }
      |     ^
